force-app/main/default/objects/Pack__c/Pack__c.object-meta.xml
<CustomObject>
    <label>Bundle Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>