force-app/main/default/objects/Pack__c/fields/SortNumber__c.field-meta.xml
<CustomField>
    <fullName>SortNumber__c</fullName>
    <externalId>true</externalId>
    <label>SortNumber</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>