force-app/main/default/objects/Pack__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>PackageLine__c.Total_Price__c</summarizedField>
    <summaryForeignKey>PackageLine__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>