force-app/main/default/objects/Pack__c/validationRules/BP_VA01_Validate_currecy.validationRule-meta.xml
<ValidationRule>
    <fullName>BP_VA01_Validate_currecy</fullName>
    <active>true</active>
    <description>Check if the Bundle currency matches the price book currency</description>
    <errorConditionFormula>Text(PriceBook__r.CurrencyIsoCode) != Text(CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>The packe currency must mach the selected Pricebook currency</errorMessage>
</ValidationRule>